env/code_53be448d16d44/stderr.txt
  File "main.py", line 2
    print "python"
                 ^
SyntaxError: invalid syntax
